Live streaming fully working with RTMP over 443, HLS, nginx proxy and web player

--- a/proxy/nginx/nginx.conf
+++ b/proxy/nginx/nginx.conf
@@ -36,13 +36,14 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
-  
+
         location /api/ {
-           proxy_pass http://api;
-           proxy_set_header Host $host;
-           proxy_set_header X-Real-IP $remote_addr;
+            proxy_pass http://api;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
+        # 🔥 IMPORTANT FIX
         location /live/ {
             proxy_pass http://media/live/;
             proxy_set_header Host $host;
